--- a/courses.css
+++ b/courses.css
@@ -11,7 +11,7 @@ body, html {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     color: #333;
-    background-image: url(techimg/web3\ \(1\).jpg); background-size: cover; width:100 ;
+    background-image: url(web3\ \(1\).jpg); background-size: cover; width:100 ;
 }
 
 /* Header styles */
