--- a/blog.css
+++ b/blog.css
@@ -52,7 +52,7 @@ header {
 
 /* Hero Section */
 .hero-section {
-    background: url('techimg/web4.jpg') no-repeat center center/cover;
+    background: url('web4.jpg') no-repeat center center/cover;
     height: 60vh;
     display: flex;
     justify-content: center;
